[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/player/PlayerDrone.gd" type="Script" id=1]
[ext_resource path="res://sprites/maiden/maiden3.png" type="Texture" id=2]
[ext_resource path="res://sprites/maiden/maiden1.png" type="Texture" id=3]
[ext_resource path="res://sprites/maiden/maiden2.png" type="Texture" id=4]
[ext_resource path="res://sprites/face/numergrid.png" type="Texture" id=6]
[ext_resource path="res://sprites/zap.png" type="Texture" id=7]
[ext_resource path="res://objects/player/Inventory.tscn" type="PackedScene" id=8]
[ext_resource path="res://objects/player/BatteryPower.tscn" type="PackedScene" id=9]
[ext_resource path="res://sfx/sprint2.ogg" type="AudioStream" id=11]
[ext_resource path="res://sfx/sprint1.ogg" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "forward",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "backward",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape" id=2]
radius = 1.28
height = 4.98

[sub_resource type="BoxShape" id=3]
extents = Vector3( 2.32177, 3.75091, 1.67867 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 3
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 1.0
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0, 0.905882, 1, 1 )
albedo_texture = ExtResource( 7 )

[sub_resource type="QuadMesh" id=5]
size = Vector2( 0.5, 1 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.57899, 0.0, 0, 0 ]

[node name="PlayerDrone" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Body" type="AnimatedSprite3D" parent="."]
transform = Transform( 15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 0, 0.1 )
layers = 4
alpha_cut = 2
frames = SubResource( 1 )
animation = "forward"

[node name="Display" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, 2.44957, 0.15 )

[node name="Icon" type="Sprite3D" parent="Display"]
transform = Transform( 8, 0, 0, 0, 8, 0, 0, 0, 1, 0.249127, 0.178315, 0 )
visible = false
layers = 4
modulate = Color( 0, 1, 1, 1 )
double_sided = false

[node name="ID" type="Spatial" parent="Display"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 1, -0.322687, 0.0794165, 0 )

[node name="ID1" type="Sprite3D" parent="Display/ID"]
layers = 4
modulate = Color( 0, 1, 1, 1 )
double_sided = false
texture = ExtResource( 6 )
hframes = 10

[node name="ID2" type="Sprite3D" parent="Display/ID"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0, 0 )
layers = 4
modulate = Color( 0, 1, 1, 1 )
double_sided = false
texture = ExtResource( 6 )
hframes = 10
frame = 2

[node name="ID3" type="Sprite3D" parent="Display/ID"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0, 0 )
layers = 4
modulate = Color( 0, 1, 1, 1 )
double_sided = false
texture = ExtResource( 6 )
hframes = 10
frame = 1

[node name="ID4" type="Sprite3D" parent="Display/ID"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0, 0 )
layers = 4
modulate = Color( 0, 1, 1, 1 )
double_sided = false
texture = ExtResource( 6 )
hframes = 10
frame = 6

[node name="Collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
visible = false
shape = SubResource( 2 )

[node name="SFX" type="AudioStreamPlayer" parent="."]
volume_db = 2.0

[node name="InteractArea" type="Area" parent="."]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0, 0 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="InteractArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.42757, 0, 1.40259e-07 )
shape = SubResource( 3 )

[node name="BatteryParticles" type="CPUParticles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.21892 )
material_override = SubResource( 4 )
emitting = false
amount = 4
explosiveness = 1.0
mesh = SubResource( 5 )
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
gravity = Vector3( 0, 4, 0 )
linear_accel = 6.19
linear_accel_random = 0.32
scale_amount_curve = SubResource( 6 )
hue_variation = 0.07
hue_variation_random = 0.85

[node name="FaceTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="ItemDrop" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2, 0 )
visible = false

[node name="SouthRaycast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, 5 )

[node name="NorthRaycast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -4 )

[node name="Inventory" parent="." instance=ExtResource( 8 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 5.05297, 0 )

[node name="SFXs" type="Node" parent="."]

[node name="Sprint" type="AudioStreamPlayer" parent="SFXs"]
stream = ExtResource( 12 )
bus = "Footsteps"

[node name="Sprint2" type="AudioStreamPlayer" parent="SFXs"]
stream = ExtResource( 11 )
bus = "Footsteps"

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5.44816, 0 )
light_energy = 0.3
spot_range = 24.121

[node name="BatteryPower" parent="." instance=ExtResource( 9 )]
visible = false

[connection signal="frame_changed" from="Body" to="." method="frame_changed"]
